cmake_minimum_required(VERSION 3.17)
project(Learn_Algorithms)

set(CMAKE_CXX_STANDARD 20)
INCLUDE_DIRECTORIES(include)
file (GLOB files src/*.cpp)
foreach (file ${files})
    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
    add_executable (${exe} ${file})
    message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
endforeach ()